# postgres-gsheets-wasm-fdw

./: Cargo.toml
src/: lib.rs
wit/: world.wit
